revisi at4 belom selesai jir

--- a/aktivitas4.html
+++ b/aktivitas4.html
@@ -141,12 +141,12 @@
       /* Node */
       .node {
         display: inline-block;
-        padding: 25px 20px;
+        padding: 45px 30px;
         border-radius: 15px;
         border: 2px solid #000;
-        font-size: 16px;
+        font-size: 18px;
         font-weight: 700;
-        width: 75px;
+        width: 100px;
         cursor: pointer;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
         transition: 0.3s;
@@ -211,10 +211,10 @@
       }
 
       .diagram-scale {
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      overflow: auto;  /* biar tidak ada scroll */
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        overflow: auto; /* biar tidak ada scroll */
       }
 
       .diagram-wrapper {
@@ -252,8 +252,6 @@
           transform: scale(0.55);
         }
       }
-
-      
     </style>
   </head>
   <body>
@@ -269,280 +267,198 @@
     <!-- ========================= -->
     <!-- WRAPPER KS: KIRI DAN KANAN -->
     <!-- ========================= -->
-<div class="diagram-scale">
-    <div class="diagram-wrapper">
-      <!-- ========================== -->
-      <!-- KOLOM KIRI: ADMINISTRASI 4 -->
-      <!-- ========================== -->
-      <div class="column">
-        <div class="column-title">Aktivitas Administrasi 4</div>
+    <div class="diagram-scale">
+      <div class="diagram-wrapper">
+        <!-- =========================== -->
+        <!-- KOLOM KIRI: ADMINISTRASI 4 -->
+        <!-- =========================== -->
+        <div class="column">
+          <div class="column-title">Aktivitas Administrasi 4</div>
 
-        <div class="tree">
-          <ul>
-            <li>
-              <!-- ROOT NODE -->
-              <div
-                class="node purple"
-                onclick="showModal('Aktivitas Administrasi 4','Menerbitkan Position Assignment/Stack Map final (inbound & outbound)')"
-              >
-                AA 4
-              </div>
+          <div class="tree">
+            <ul>
+              <li>
+                <div
+                  class="node purple"
+                  onclick="showModal('AA 4','Mengeluarkan instruksi mulai kerja sisi kapal (sesuai rencana di CWP/Bay Plan).')"
+                >
+                  AA 4
+                </div>
 
-              <ul>
-                <!-- ======================= -->
-                <!-- RISK 7 -->
-                <!-- ======================= -->
-                <li>
-                  <div
-                    class="node yellow"
-                    onclick="showModal('Risk 7 (Risiko 7)','Penempatan/slotting yard tidak efisien jadi re-handle & alat banyak jalan')"
-                  >
-                    R 7
-                  </div>
+                <ul>
+                  <!-- RISK 7 -->
+                  <li>
+                    <div
+                      class="node yellow"
+                      onclick="showModal('Risk 7 (Risiko 7)','RInstruksi/komunikasi tidak jelas (radio/isyarat tangan).')"
+                    >
+                      R 7
+                    </div>
+                    <ul>
+                      <li>
+                        <div
+                          class="node red"
+                          onclick="showModal('Cause 11 (Penyebab 11)','Kualitas radio buruk/crosstalk atau noise sehingga pesan terpotong/tertukar.')"
+                        >
+                          C 16
+                        </div>
+                        <ul>
+                          <li>
+                            <div
+                              class="node green"
+                              onclick="showModal('Preventive Measure 11 (Tindakan Preventif 11)','Audit & peremajaan radio, kanal khusus operasi, dan fallback ke hand-signals standar bila audio tidak andal.')"
+                            >
+                              PM 11
+                            </div>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </li>
+                  <li>
+                    
+                  </li>
 
-                  <ul>
-                    <!-- C11 → PM11 -->
-                    <li>
-                      <div
-                        class="node red"
-                        onclick="showModal('Cause 11 (Penyebab 11)','Stack map tidak pakai urutan pengambilan (delivery sequence/dwell time/priority tidak dipertimbangkan)')"
-                      >
-                        C 11
-                      </div>
+                  <!-- RISK 10 -->
+                  <li>
+                    <div
+                      class="node yellow"
+                      onclick="showModal('Risk 10 (Risiko 10)','Tidak sinkron dengan CWP/Bay Plan terbaru (versi salah).')"
+                    >
+                      R 10
+                    </div>
+                    <ul>
+                      <li>
+                        <div
+                          class="node red"
+                          onclick="showModal('Cause 17 (Penyebab 17)','Rencana terbaru tidak dipublikasikan ke semua pihak/perangkat (pakai file lama).')"
+                        >
+                          C 17
+                        </div>
+                        <ul>
+                          <li>
+                            <div
+                              class="node green"
+                              onclick="showModal('Preventive Measure 17 (Tindakan Preventif 17)','Terapkan PCS/TOS sebagai “single source of truth” + kontrol versi & notifikasi otomatis saat ada revisi rencana.')"
+                            >
+                              PM 17
+                            </div>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
 
-                      <ul>
-                        <li>
-                          <div
-                            class="node green"
-                            onclick="showModal('Preventive Measure 11 (Tindakan Preventif 11)','Lakukan slotting berbasis sequence & dwell time untuk meminimalkan re-handle')"
-                          >
-                            PM 11
-                          </div>
-                        </li>
-                      </ul>
-                    </li>
+        <!-- ========================== -->
+        <!-- KOLOM KANAN: PEMERIKSAAN 4 -->
+        <!-- ========================== -->
+        <div class="column">
+          <div class="column-title">Aktivitas Pemeriksaan 4</div>
 
-                    <!-- C12 → PM12 -->
-                    <li>
-                      <div
-                        class="node red"
-                        onclick="showModal('Cause 12 (Penyebab 12)','Data kontainer di TOS tidak lengkap/akurat (size/type/berat/reefer/DG/hold) saat planning')"
-                      >
-                        C 12
-                      </div>
+          <div class="tree">
+            <ul>
+              <li>
+                <div
+                  class="node purple"
+                  onclick="showModal('AP 4','Validasi perangkat & dokumen kerja sebelum mulai (device & validasi tools kerja; CWP/PA/Radio).')"
+                >
+                  AP 4
+                </div>
 
-                      <ul>
-                        <li>
-                          <div
-                            class="node green"
-                            onclick="showModal('Preventive Measure 12 (Tindakan Preventif 12)','Aktifkan rule-based validation (termasuk VGM SOLAS) & gunakan MIG BAPLIE/MOVINS terbaru saat planning')"
-                          >
-                            PM 12
-                          </div>
-                        </li>
-                      </ul>
-                    </li>
+                <ul>
+                  <!-- RISK 9 -->
+                  <li>
+                    <div
+                      class="node yellow"
+                      onclick="showModal('Risk 9 (Risiko 9)','Gagal komunikasi radio atau miskom (radio mati/salah kanal/tidak cukup unit).')"
+                    >
+                      R 9
+                    </div>
+                    <ul>
+                      <li>
+                        <div
+                          class="node red"
+                          onclick="showModal('Cause 19 (Penyebab 19)','Gangguan cakupan & kebisingan: dead spot di area kerja, headset/noise-cancelling tidak digunakan.')"
+                        >
+                          C 19
+                        </div>
+                        <ul>
+                          <li>
+                            <div
+                              class="node green"
+                              onclick="showModal('Preventive Measure 19 (Tindakan Preventif 19)','Petakan cakupan & pasang repeater di area dead spot, sekaligus wajib headset untuk semua peran kritis.')"
+                            >
+                              PM 19
+                            </div>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </li>
 
-                    <!-- C13 → PM13 -->
-                    <li>
-                      <div
-                        class="node red"
-                        onclick="showModal('Cause 13 (Penyebab 13)','Inventori yard tidak real-time (slot di sistem ≠ kondisi lapangan), sehingga slot rencana ternyata terisi/terblokir')"
-                      >
-                        C 13
-                      </div>
+                  <!-- RISK 10 -->
+                  <li>
+                    <div
+                      class="node yellow"
+                      onclick="showModal('Risk 10 (Risiko 10)','Rencana kerja yang dibagikan tidak tepat/versinya salah (CWP/PA kadaluarsa) → interferensi crane & waktu tunggu.')"
+                    >
+                      R 10
+                    </div>
 
-                      <ul>
-                        <li>
-                          <div
-                            class="node green"
-                            onclick="showModal('Preventive Measure 13 (Tindakan Preventif 13)','Pasang RFID/QR-based yard tracking + mandatory move confirmation agar inventory TOS selalu mutakhir')"
-                          >
-                            PM 13
-                          </div>
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
+                    <ul>
+                      <!-- CAUSE 20 -->
+                      <li>
+                        <div
+                          class="node red"
+                          onclick="showModal('Cause 20 (Penyebab 20)','Perubahan rencana last-minute tidak tersosialisasi (tidak ada cut-off & change control yang jelas).')"
+                        >
+                          C 20
+                        </div>
+                        <ul>
+                          <li>
+                            <div
+                              class="node green"
+                              onclick="showModal('Preventive Measure 20 (Tindakan Preventif 20)','Terapkan cut-off & change control terpusat di TOS; revisi hanya lewat tiket yang otomatis broadcast.')"
+                            >
+                              PM 20
+                            </div>
+                          </li>
+                        </ul>
+                      </li>
 
-                <!-- ======================= -->
-                <!-- RISK 8 -->
-                <!-- ======================= -->
-                <li>
-                  <div
-                    class="node yellow"
-                    onclick="showModal('Risk 8 (Risiko 8)','Tidak sinkron dengan arus truk/gate → blok macet & truck turnaround time naik')"
-                  >
-                    R 8
-                  </div>
-
-                  <ul>
-                    <!-- C14 → PM14 -->
-                    <li>
-                      <div
-                        class="node red"
-                        onclick="showModal('Cause 14 (Penyebab 14)','Perubahan/ketidakpastian jadwal kedatangan truk (TAS/ETA) tidak masuk ke perencanaan')"
-                      >
-                        C 14
-                      </div>
-
-                      <ul>
-                        <li>
-                          <div
-                            class="node green"
-                            onclick="showModal('Preventive Measure 14 (Tindakan Preventif 14)','Terapkan Terminal Booking System (TBS) terintegrasi TOS untuk meratakan kedatangan & memperkecil waiting time')"
-                          >
-                            PM 14
-                          </div>
-                        </li>
-                      </ul>
-                    </li>
-
-                    <!-- C15 → PM15 -->
-                    <li>
-                      <div
-                        class="node red"
-                        onclick="showModal('Cause 15 (Penyebab 15)','Beban pengambilan ditumpuk di blok yang sama pada jam yang sama (kapasitas gate/alat tidak diperhitungkan)')"
-                      >
-                        C 15
-                      </div>
-
-                      <ul>
-                        <li>
-                          <div
-                            class="node green"
-                            onclick="showModal('Preventive Measure 15 (Tindakan Preventif 15)','Load-balancing per blok & time-window lewat aturan TAS/yard (kapasitas gate & alat sebagai constraint)')"
-                          >
-                            PM 15
-                          </div>
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-              </ul>
-            </li>
-          </ul>
+                      <!-- CAUSE 21 -->
+                      <li>
+                        <div
+                          class="node red"
+                          onclick="showModal('Cause 21 (Penyebab 21)','Distribusi rencana manual (print/WA) tanpa kontrol versi/timestamp, sehingga tim memakai versi berbeda.')"
+                        >
+                          C 21
+                        </div>
+                        <ul>
+                          <li>
+                            <div
+                              class="node green"
+                              onclick="showModal('Preventive Measure 21 (Tindakan Preventif 21)','Gunakan satu sumber (TOS) dengan timestamp; bagikan tautan versi live, bukan file cetak/WA.')"
+                            >
+                              PM 21
+                            </div>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
-
-      <!-- ========================== -->
-      <!-- KOLOM KANAN: PEMERIKSAAN 1 -->
-      <!-- ========================== -->
-      <div class="column">
-        <div class="column-title">Aktivitas Pemeriksaan 4</div>
-
-        <div class="tree">
-        <ul>
-    <li>
-      <!-- AKTIVITAS -->
-      <div
-        class="node purple"
-        onclick="showModal('Aktivitas Pemeriksaan 4','Validasi Open Stack dan Analisa YOR (kepadatan) termasuk prediksinya')"
-      >
-        AP 4
-      </div>
-
-      <ul>
-        <li>
-          <!-- RISK TUNGGAL -->
-          <div
-            class="node yellow"
-            onclick="showModal('Risk 8 (Risiko 8)','YOR terlalu tinggi (yard “terlalu penuh”) → kemacetan & banyak re-handle')"
-          >
-            R 8
-          </div>
-
-          <ul>
-
-            <!-- CAUSE 1 -->
-            <li>
-              <div
-                class="node red"
-                onclick="showModal('Cause 15 (Penyebab 15)','Imbalance arus: gate-out tertahan (hold BC/karantina) sementara gate-in terus mengalir; rollover muatan karena kapal terlambat')"
-              >
-                C 15
-              </div>
-              <ul>
-                <li>
-                  <div
-                    class="node green"
-                    onclick="showModal('Preventive Measure 15 (Tindakan Preventif 15)','Terapkan throttled release + truck appointment agar arus gate-out/gate-in seimbang')"
-                  >
-                    PM 15
-                  </div>
-                </li>
-              </ul>
-            </li>
-
-            <!-- CAUSE 2 -->
-            <li>
-              <div
-                class="node red"
-                onclick="showModal('Cause 16 (Penyebab 16)','Produktivitas yard turun: breakdown alat/kurang operator sehingga backlog menumpuk')"
-              >
-                C 16
-              </div>
-              <ul>
-                <li>
-                  <div
-                    class="node green"
-                    onclick="showModal('Preventive Measure 16 (Tindakan Preventif 16)','Siapkan standby plan operator & unit cadangan untuk hot-swap saat downtime')"
-                  >
-                    PM 16
-                  </div>
-                </li>
-              </ul>
-            </li>
-
-            <!-- CAUSE 3 -->
-            <li>
-              <div
-                class="node red"
-                onclick="showModal('Cause 17 (Penyebab 17)','Area efektif berkurang: blok ditutup (maintenance/No-Work Area) atau dibatasi (zona reefer/DG) sehingga kepadatan naik')"
-              >
-                C 17
-              </div>
-              <ul>
-                <li>
-                  <div
-                    class="node green"
-                    onclick="showModal('Preventive Measure 17 (Tindakan Preventif 17)','Aktifkan blok alternatif/overflow sementara & lakukan dynamic zoning untuk rebalance kepadatan.')"
-                  >
-                    PM 17
-                  </div>
-                </li>
-              </ul>
-            </li>
-
-            <!-- CAUSE 4 -->
-            <li>
-              <div
-                class="node red"
-                onclick="showModal('Cause 18 (Penyebab 18)','Kebijakan stacking kurang tepat: tinggi tumpukan/slotting campur (import-export-empty) menambah re-handle dan memperlambat pengosongan blok.')"
-              >
-                C 18
-              </div>
-              <ul>
-                <li>
-                  <div
-                    class="node green"
-                    onclick="showModal('Preventive Measure 18 (Tindakan Preventif 18)','Kunci yard policy di TOS (tinggi tumpuk & blok khusus import/export/empty) dengan rule-based slotting.')"
-                  >
-                    PM 18
-                  </div>
-                </li>
-              </ul>
-            </li>
-
-          </ul>
-        </li>
-      </ul>
-    </li>
-  </ul>
-</div>
-</div>
+    </div>
 
     <!-- MODAL -->
     <div class="modal-overlay" id="infoModal">
