--- a/aktivitas6.html
+++ b/aktivitas6.html
@@ -221,6 +221,47 @@
         transition: transform 0.3s ease;
       }
 
+      /* TABEL */
+      .table-container {
+        width: 90%;
+        margin: 60px auto;
+        background: #ffffff;
+        padding: 30px;
+        border-radius: 20px;
+        box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+        overflow-x: auto;
+      }
+
+      .clean-table {
+        width: 100%;
+        border-collapse: collapse;
+        font-size: 14px;
+        color: #333;
+      }
+
+      .clean-table th {
+        background: #126e80;
+        color: white;
+        font-weight: 600;
+        padding: 12px;
+        text-align: center;
+        border-bottom: 2px solid #0f5c6a;
+      }
+
+      .clean-table td {
+        padding: 10px 12px;
+        border-bottom: 1px solid #ddd;
+        text-align: center;
+      }
+
+      .clean-table tr:nth-child(even) {
+        background: #f5fbfc;
+      }
+
+      .clean-table tr:hover {
+        background: #e7f5f7;
+      }
+
       /* RESPONSIVE BREAKPOINTS */
       @media (max-width: 1600px) {
         .diagram-wrapper {
@@ -463,6 +504,92 @@
         <h2 id="modalTitle"></h2>
         <p id="modalText"></p>
       </div>
+    </div>
+
+    <!-- TABEL BESAR -->
+    <div class="table-container">
+      <h2
+        style="
+          text-align: center;
+          margin-bottom: 25px;
+          font-weight: 700;
+          color: #126e80;
+        "
+      >
+        Knowledge Base Aktivitas Terminal Teluk Lamong
+      </h2>
+
+      <table class="clean-table">
+        <thead>
+          <tr>
+            <th>AT Code</th>
+            <th>Aktivitas Terminal</th>
+            <th>AA/AP Code</th>
+            <th>Aktivitas Admin/Pemeriksaan</th>
+            <th>Risk Code</th>
+            <th>Risk</th>
+            <th>Cause Code</th>
+            <th>Cause</th>
+            <th>PM Code</th>
+            <th>Preventive Measure</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <!-- AT 6 -->
+          <tr>
+            <td>AT 6</td>
+            <td>Yard Talker</td>
+            <td>AA 6</td>
+            <td>Koordinasi operasional yard</td>
+            <td>R11</td>
+            <td>Instruksi salah</td>
+            <td>C22</td>
+            <td>Data block salah</td>
+            <td>PM22</td>
+            <td>Auto-verification yard block</td>
+          </tr>
+
+          <tr>
+            <td>AT 6</td>
+            <td>Yard Talker</td>
+            <td>AA 6</td>
+            <td>Koordinasi yard</td>
+            <td>R12</td>
+            <td>Keterlambatan instruksi</td>
+            <td>C23</td>
+            <td>Keterlambatan update posisi</td>
+            <td>PM23</td>
+            <td>Live position system</td>
+          </tr>
+
+          <tr>
+            <td>AT 6</td>
+            <td>Yard Talker</td>
+            <td>AP 6</td>
+            <td>Verifikasi pergerakan yard</td>
+            <td>R11</td>
+            <td>Instruksi salah</td>
+            <td>C24</td>
+            <td>Operator salah baca info</td>
+            <td>PM24</td>
+            <td>Dashboard info + highlight</td>
+          </tr>
+
+          <tr>
+            <td>AT 6</td>
+            <td>Yard Talker</td>
+            <td>AP 6</td>
+            <td>Verifikasi pergerakan yard</td>
+            <td>R12</td>
+            <td>Keterlambatan instruksi</td>
+            <td>C25</td>
+            <td>Komunikasi manual</td>
+            <td>PM25</td>
+            <td>Instant messaging terintegrasi TOS</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
     <script>
