--- a/aktivitas4.html
+++ b/aktivitas4.html
@@ -222,7 +222,7 @@
         transition: transform 0.3s ease;
       }
 
-        /* TABEL */
+      /* TABEL */
       .table-container {
         width: 90%;
         margin: 60px auto;
@@ -356,9 +356,7 @@
                       </li>
                     </ul>
                   </li>
-                  <li>
-                    
-                  </li>
+                  <li></li>
 
                   <!-- RISK 10 -->
                   <li>
@@ -540,57 +538,57 @@
         </thead>
 
         <tbody>
-          <!-- AT 3 -->
+          <!-- AT 4 -->
           <tr>
-            <td>AT 3</td>
-            <td>Ship Planner</td>
-            <td>AA 3</td>
-            <td>Menyusun Rencana Operasi Kapal</td>
-            <td>R5</td>
-            <td>Mis-stow / salah penataan</td>
-            <td>C9</td>
-            <td>Data stowage tidak lengkap</td>
-            <td>PM9</td>
-            <td>Data validation + pre-check stowage</td>
+            <td>AT 4</td>
+            <td>Yard Planner</td>
+            <td>AA 4</td>
+            <td>Menyusun yard plan</td>
+            <td>R7</td>
+            <td>Penumpukan tidak efisien</td>
+            <td>C13</td>
+            <td>Yard occupancy tidak real-time</td>
+            <td>PM13</td>
+            <td>Yard monitoring + occupancy mapping</td>
           </tr>
 
           <tr>
-            <td>AT 3</td>
-            <td>Ship Planner</td>
-            <td>AA 3</td>
-            <td>Menyusun Rencana Operasi Kapal</td>
-            <td>R6</td>
-            <td>Crane conflict</td>
-            <td>C10</td>
-            <td>Perhitungan jangkauan crane salah</td>
-            <td>PM10</td>
-            <td>Cranespace simulation</td>
+            <td>AT 4</td>
+            <td>Yard Planner</td>
+            <td>AA 4</td>
+            <td>Menyusun yard plan</td>
+            <td>R8</td>
+            <td>Overstay / blocking</td>
+            <td>C14</td>
+            <td>Perkiraan dwell time salah</td>
+            <td>PM14</td>
+            <td>Dwell time prediction</td>
           </tr>
 
           <tr>
-            <td>AT 3</td>
-            <td>Ship Planner</td>
-            <td>AP 3</td>
-            <td>Verifikasi rencana operasi</td>
-            <td>R5</td>
-            <td>Mis-stow</td>
-            <td>C11</td>
-            <td>Mismatch stowage plan vs manifest</td>
-            <td>PM11</td>
-            <td>Cross-check otomatis TOS–Manifest</td>
+            <td>AT 4</td>
+            <td>Yard Planner</td>
+            <td>AP 4</td>
+            <td>Verifikasi yard plan</td>
+            <td>R7</td>
+            <td>Kepadatan yard</td>
+            <td>C15</td>
+            <td>Data block capacity salah</td>
+            <td>PM15</td>
+            <td>Auto-capacity check</td>
           </tr>
 
           <tr>
-            <td>AT 3</td>
-            <td>Ship Planner</td>
-            <td>AP 3</td>
-            <td>Verifikasi rencana operasi</td>
-            <td>R6</td>
-            <td>Crane conflict</td>
-            <td>C12</td>
-            <td>Crane spacing tidak sesuai</td>
-            <td>PM12</td>
-            <td>Auto-spacing & safety margin</td>
+            <td>AT 4</td>
+            <td>Yard Planner</td>
+            <td>AP 4</td>
+            <td>Verifikasi yard plan</td>
+            <td>R8</td>
+            <td>Blocking</td>
+            <td>C16</td>
+            <td>Barang prioritas bercampur</td>
+            <td>PM16</td>
+            <td>Priority slot rules</td>
           </tr>
         </tbody>
       </table>
