--- a/aktivitas2.html
+++ b/aktivitas2.html
@@ -163,12 +163,13 @@
         display: inline-flex;
         justify-content: center;
         align-items: center;
-        padding: 10px 15px; /* Padding lebih kecil */
+        padding: 15px 20px; /* Padding lebih kecil */
         border-radius: 10px;
         border: 2px solid #000;
         font-size: 13px; /* Font lebih kecil */
         font-weight: 700;
-        min-width: 50px; /* Lebar minimal lebih kecil */
+        min-width: 70px; /* Lebar minimal lebih kecil */
+        min-height: 40px;
         cursor: pointer;
         box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
         transition: 0.2s;
