--- a/aktivitas4.html
+++ b/aktivitas4.html
@@ -140,16 +140,22 @@
 
       /* Node */
       .node {
-        display: inline-block;
-        padding: 45px 30px;
-        border-radius: 15px;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        padding: 15px 20px; /* Padding lebih kecil */
+        border-radius: 10px;
         border: 2px solid #000;
-        font-size: 18px;
+        font-size: 13px; /* Font lebih kecil */
         font-weight: 700;
-        width: 100px;
+        min-width: 70px; /* Lebar minimal lebih kecil */
+        min-height: 40px;
         cursor: pointer;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
-        transition: 0.3s;
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+        transition: 0.2s;
+        background: white;
+        position: relative;
+        z-index: 2;
       }
       .node:hover {
         transform: scale(1.05);
@@ -356,7 +362,7 @@
                       </li>
                     </ul>
                   </li>
-                  <li></li>
+                  
 
                   <!-- RISK 10 -->
                   <li>
