--- a/aktivitas4.html
+++ b/aktivitas4.html
@@ -341,51 +341,56 @@
                           class="node red"
                           onclick="showModal('Cause 11 (Penyebab 11)','Kualitas radio buruk/crosstalk atau noise sehingga pesan terpotong/tertukar.')"
                         >
-                          C 16
-                        </div>
-                        <ul>
-                          <li>
-                            <div
-                              class="node green"
-                              onclick="showModal('Preventive Measure 11 (Tindakan Preventif 11)','Audit & peremajaan radio, kanal khusus operasi, dan fallback ke hand-signals standar bila audio tidak andal.')"
-                            >
-                              PM 11
-                            </div>
+                          C 11
+                        </div><ul>
+                          <li><div class="node green" onclick="showModal('awik','isi')">
+                            PM 11
+                          </div>
                           </li>
                         </ul>
+                      <li><div class="node red" onclick="showModal('awikwok','isi')">
+                        C 12
+                        </div>
+                        <ul>
+                          <li><div class="node green" onclick="showModal('awikwok','isi')">
+                            PM 12</div></li>
+                        </ul>
                       </li>
+                      <li><div class="node red" onclick="showModal('apa','isi')">
+                        C 13
+                      </div><ul><li><div class="node green" onclick="showModal('awokwko','isi')">PM 13</div></li></ul></li>
                     </ul>
                   </li>
-                  <li>
-                    
-                  </li>
 
-                  <!-- RISK 10 -->
+                  <!-- RISK 8 -->
                   <li>
                     <div
                       class="node yellow"
-                      onclick="showModal('Risk 10 (Risiko 10)','Tidak sinkron dengan CWP/Bay Plan terbaru (versi salah).')"
+                      onclick="showModal('Risk 8 (Risiko 8)','Tidak sinkron dengan CWP/Bay Plan terbaru (versi salah).')"
                     >
-                      R 10
+                      R 8
                     </div>
                     <ul>
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 17 (Penyebab 17)','Rencana terbaru tidak dipublikasikan ke semua pihak/perangkat (pakai file lama).')"
+                          onclick="showModal('Cause 14 (Penyebab 14)','Rencana terbaru tidak dipublikasikan ke semua pihak/perangkat (pakai file lama).')"
                         >
-                          C 17
+                          C 14
                         </div>
                         <ul>
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 17 (Tindakan Preventif 17)','Terapkan PCS/TOS sebagai “single source of truth” + kontrol versi & notifikasi otomatis saat ada revisi rencana.')"
+                              onclick="showModal('Preventive Measure 14 (Tindakan Preventif 14)','Terapkan PCS/TOS sebagai “single source of truth” + kontrol versi & notifikasi otomatis saat ada revisi rencana.')"
                             >
-                              PM 17
+                              PM 14
                             </div>
                           </li>
                         </ul>
+                      </li>
+                      <li><div class="node red" onclick="showModal('apa gitu','isi')">C 15</div>
+                      <ul><li><div class="node green" onclick="showModal('apa juduul','isi')">PM 15</div></li></ul>
                       </li>
                     </ul>
                   </li>
@@ -406,93 +411,25 @@
               <li>
                 <div
                   class="node purple"
-                  onclick="showModal('AP 4','Validasi perangkat & dokumen kerja sebelum mulai (device & validasi tools kerja; CWP/PA/Radio).')"
-                >
+                  onclick="showModal('AP 4','Validasi perangkat & dokumen kerja sebelum mulai (device & validasi tools kerja; CWP/PA/Radio).')">
                   AP 4
                 </div>
-
-                <ul>
-                  <!-- RISK 9 -->
-                  <li>
-                    <div
-                      class="node yellow"
-                      onclick="showModal('Risk 9 (Risiko 9)','Gagal komunikasi radio atau miskom (radio mati/salah kanal/tidak cukup unit).')"
-                    >
-                      R 9
-                    </div>
-                    <ul>
-                      <li>
-                        <div
-                          class="node red"
-                          onclick="showModal('Cause 19 (Penyebab 19)','Gangguan cakupan & kebisingan: dead spot di area kerja, headset/noise-cancelling tidak digunakan.')"
-                        >
-                          C 19
-                        </div>
-                        <ul>
-                          <li>
-                            <div
-                              class="node green"
-                              onclick="showModal('Preventive Measure 19 (Tindakan Preventif 19)','Petakan cakupan & pasang repeater di area dead spot, sekaligus wajib headset untuk semua peran kritis.')"
-                            >
-                              PM 19
-                            </div>
-                          </li>
-                        </ul>
-                      </li>
-                    </ul>
-                  </li>
-
-                  <!-- RISK 10 -->
-                  <li>
-                    <div
-                      class="node yellow"
-                      onclick="showModal('Risk 10 (Risiko 10)','Rencana kerja yang dibagikan tidak tepat/versinya salah (CWP/PA kadaluarsa) → interferensi crane & waktu tunggu.')"
-                    >
-                      R 10
-                    </div>
-
-                    <ul>
-                      <!-- CAUSE 20 -->
-                      <li>
-                        <div
-                          class="node red"
-                          onclick="showModal('Cause 20 (Penyebab 20)','Perubahan rencana last-minute tidak tersosialisasi (tidak ada cut-off & change control yang jelas).')"
-                        >
-                          C 20
-                        </div>
-                        <ul>
-                          <li>
-                            <div
-                              class="node green"
-                              onclick="showModal('Preventive Measure 20 (Tindakan Preventif 20)','Terapkan cut-off & change control terpusat di TOS; revisi hanya lewat tiket yang otomatis broadcast.')"
-                            >
-                              PM 20
-                            </div>
-                          </li>
-                        </ul>
-                      </li>
-
-                      <!-- CAUSE 21 -->
-                      <li>
-                        <div
-                          class="node red"
-                          onclick="showModal('Cause 21 (Penyebab 21)','Distribusi rencana manual (print/WA) tanpa kontrol versi/timestamp, sehingga tim memakai versi berbeda.')"
-                        >
-                          C 21
-                        </div>
-                        <ul>
-                          <li>
-                            <div
-                              class="node green"
-                              onclick="showModal('Preventive Measure 21 (Tindakan Preventif 21)','Gunakan satu sumber (TOS) dengan timestamp; bagikan tautan versi live, bukan file cetak/WA.')"
-                            >
-                              PM 21
-                            </div>
-                          </li>
-                        </ul>
-                      </li>
-                    </ul>
-                  </li>
+                <ul><li><div class="node yellow" onclick="showModal('isi r8','')">
+                  R 8</div>
+                  <ul>
+                    <li><div class="node red" onclick="showModal('apa gitu','isi')">C 15</div><ul>
+                      <li><div class="node green" onclick="showModal('apa gitu','isi')">PM 15</div></li>
+                    </ul></li>
+                    <li><div class="node red" onclick="showModal('apa gitu','isi')">C 16</div><ul>
+                      <li><div class="node green" onclick="showModal('apa gitu','isi')">PM 16</div></li>
+                    </ul></li>
+                    <li><div class="node red" onclick="showModal('apa gitu','isi')">C 17</div><ul>
+                      <li><div class="node green" onclick="showModal('apa gitu','isi')">PM 17</div></li>
+                    </ul></li>
+                    <li><div class="node red" onclick="showModal('apa gitu','isi')">C 18</div><ul>
+                      <li><div class="node green" onclick="showModal('apa gitu','isi')">PM 18</div></li>
+                    </ul></li>
+                  </ul>
                 </ul>
               </li>
             </ul>
