--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
         box-shadow: 0 3px 12px rgba(0, 0, 0, 0.05);
       }
 
+      .navbar a:hover,
+      .navbar a.active {
+        border-style: solid;
+        border-top: #222;
+        border-right: #222;
+        border-left: #222;
+        color: #00abf0;
+      }
+
       .nav-links {
         margin-right: 70px;
       }
@@ -124,7 +133,7 @@
   <body>
     <div class="navbar">
       <div class="nav-links">
-        <a href="index.html">Home</a>
+        <a href="index.html" class="active">Home</a>
         <a href="knowledge-base.html">Knowledge Base</a>
       </div>
     </div>
