--- a/knowledge-base.html
+++ b/knowledge-base.html
@@ -34,6 +34,15 @@
         box-sizing: border-box;
       }
 
+      .navbar a:hover,
+      .navbar a.active {
+        border-style: solid;
+        border-top: #222;
+        border-right: #222;
+        border-left: #222;
+        color: #00abf0;
+      }
+
       .nav-links {
         margin-right: 70px;
       }
@@ -200,7 +209,7 @@
     <div class="navbar">
       <div class="nav-links">
         <a href="index.html">Home</a>
-        <a href="knowledge-base.html">Knowledge Base</a>
+        <a href="knowledge-base.html" class="active">Knowledge Base</a>
       </div>
     </div>
 
